# brailleart

./: CMakeLists.txt  README.md
src/: brailleart.c  debug.c  dithering.c  play_at_fps.c
